# api-data-insight

./: .gitignore  .gitmodules  .pre-commit-config.yaml  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/api-data-insight/: main.py
src/api_data_insight/: main.py
src/api_data_insight/data_persistency/clickhouse/: __init__.py
src/web_app/: main.py
superset/: Dockerfile
