[tool.poetry]
name = "anomaly-detection-iot"
version = "0.1.0"
description = "A package to visualize data from domotz's public api"
authors = ["Domenico Di Gangi <digangidomenico@gmail.com>"]
packages = [{include = "domotz_dashboards", from="src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.28"
pydantic = "*"
pydantic-settings = "*"
kaleido = "0.2.1" 
altair = "<5"
pycaret = "3.2.0"
httpx = "^0.25.0"
aioredis = "^2.0.1"
redis = "^5.0.1"
pygwalker = "^0.3.9"
api-fetcher = { path = "./submodules/api-fetcher", develop = true }
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pylama = "^8.4.1"
ipykernel = "^6.25.2"
python-dotenv = "^1.0.0"
pre-commit = "^3.5.0"
black = "^23.10.1"
pylint = "^3.0.2"
isort = "^5.12.0"

